# nerf-pytorch

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
configs/: default.yaml
configs/data/: nerf_synthetic.yaml
configs/device/: default.yaml
configs/network/: vanilla_nerf.yaml
configs/renderer/: volume_renderer.yaml
configs/scene/: cube.yaml
configs/signal_encoder/: positional.yaml
configs/trainer/: debug.yaml
radiance_fields/data_loader/: __init__.py  nerf_synthetic.py
radiance_fields/network/: __init__.py  vanilla_nerf.py
radiance_fields/renderer/: __init__.py  cameras.py  rays.py  volume_renderer.py
radiance_fields/renderer/integrator/: __init__.py  base.py  quadrature.py
radiance_fields/renderer/ray_sampler/: __init__.py  base.py  stratified.py
radiance_fields/scene/: __init__.py  scene.py
radiance_fields/scene/primitives/: __init__.py  base.py  cube.py
radiance_fields/signal_encoder/: __init__.py  base.py  positional.py
radiance_fields/utils/: load_blender.py
runner/: train.py  utils.py
scripts/: download_gdrive.py  download_lego_data.sh
